fix jumpy ghost button on hover

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -72,11 +72,14 @@ canvas {
   color: $white;
   font-size: 1rem;
   transition: all ease-in-out 100ms;
-  &:hover, &:focus, &:active {
+  font-weight: 500;
+  &:hover {
     cursor: pointer;
     background: $white;
     color: $black;
-    font-weight: 500;
+    outline: none;
+  }
+  &:focus, &:active {
     outline: none;
   }
 }
